--- a/chessy_backend/Cargo.toml
+++ b/chessy_backend/Cargo.toml
@@ -19,3 +19,5 @@ env_logger = "0.10.0"
 futures = "0.3.28"
 futures-util = "0.3.28"
 log = "0.4.18"
+serde = { version = "1.0.163", features = ["derive"] }
+uuid = { version = "1.3.3", features = ["v4", "fast-rng", "serde"] }
