--- a/chess_engine/Cargo.toml
+++ b/chess_engine/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2021"
 
 [dependencies]
 enum-iterator = "1.4.1"
+serde = { version = "1.0.163", features = ["derive"] }
+serde_json = "1.0.96"
 thiserror = "1.0.40"
