--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -9,7 +9,7 @@ name: Deploy static content to Pages
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ['main']
+    branches: ['master']
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -40,7 +40,7 @@ jobs:
       - name: Install dependencies
         run: nix-shell ../default.nix --run "yarn install"
       - name: Build
-        run: yarn build
+        run: nix-shell ../default.nix --run "yarn build"
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
