--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -39,6 +39,7 @@ jobs:
         with:
           node-version: 21.7.3
           cache: 'npm'
+          cache-dependency-path: './chessy_frontend/package-lock.json'
       - name: Install dependencies
         run: npm ci
       - name: build target
